Closed Bug 1207021 Opened 9 years ago Closed 9 years ago

MP4 Demuxer not setting the dts for plain mp4

Categories

(Core :: Audio/Video: Playback, defect)

43 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox43 --- fixed
firefox44 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(1 file)

This is the core reason on why libav 0.8 (as used on try machines) do not work.
Assignee: nobody → jyavenard
https://hg.mozilla.org/mozilla-central/rev/a6e7048c2cce
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
Blocks: 1214943
Comment on attachment 8664040 [details] [diff] [review]
[mp4] Properly set dts on plain mp4 media.

Approval Request Comment
[Feature/regressing bug #]: 1214943
[User impact if declined]: Will cause frames to be displayed out of order with early version of LibAV (<= 0.8)
[Describe test coverage new/current, TreeHerder]: In central for a few weeks.
[Risks and why]: Can't think of any.
[String/UUID change made/needed]: None
Attachment #8664040 - Flags: approval-mozilla-aurora?
Comment on attachment 8664040 [details] [diff] [review]
[mp4] Properly set dts on plain mp4 media.

Part of ffmpeg follow up work, ok to uplift to aurora.
Attachment #8664040 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: