Bug 1207021: [mp4] Properly set dts on plain mp4 media. r=edwin