media/libstagefright/binding/include/mp4_demuxer/Index.h
@@ -51,6 +51,7 @@ public:
     uint64_t end_offset;
     uint64_t start_composition;
     uint64_t end_composition;
+    uint64_t start_decode;
     bool sync;
   };
 
